--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <title>pongsemble</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/8.3.1/firebase-app.js"></script>
+<script src="/__/firebase/8.3.1/firebase-app.js" defer></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.3.1/firebase-auth.js"defer></script>
+<script src="/__/firebase/8.3.1/firebase-database.js" defer></script>
 
 <!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+<script src="/__/firebase/init.js" defer></script>
 
 <link rel="stylesheet" href="css/main.css">
 <script src="js/pongsemble_client.js" defer></script>
