--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
     <title>pongsemble</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/8.3.1/firebase-app.js" defer></script>
+    <script src="/__/firebase/8.3.1/firebase-app.js" defer></script>
 
-<script src="/__/firebase/8.3.1/firebase-auth.js"defer></script>
-<script src="/__/firebase/8.3.1/firebase-database.js" defer></script>
+    <script src="/__/firebase/8.3.1/firebase-auth.js"defer></script>
+    <script src="/__/firebase/8.3.1/firebase-database.js" defer></script>
 
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js" defer></script>
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js" defer></script>
 
-<link rel="stylesheet" href="css/main.css">
-<script src="js/pongsemble_client.js" defer></script>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/pongsemble_client.js" defer></script>
 </head>
 <body>
 
