added some changes for Realtime Database settings for client and controllers.

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,12 @@
 </head>
 <body>
 
-    <!-- <div class="background"></div> -->
+    <div class="header">
+      <div id="playerCount"></div>
+      <div id="title"></div>
+      <div id="liveState"></div>
+    </div>
     <canvas id="canvas"></canvas>
-    <!-- <svg id="svg"></svg> -->
 
     <div class="controls" id="controls">
         <button class="settings" onclick="settingsBox.hidden = !settingsBox.hidden" id="btnSettings">
