--- a/public/controller.html
+++ b/public/controller.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
-    <title>pongsemble controller</title>
+    <title>bandy controller</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.3.1/firebase-app.js" defer></script>
@@ -15,11 +15,13 @@
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js" defer></script>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@magenta/music@1.3.1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
     <script src="js/helpers.js" defer></script>
-    <script src="js/pongsemble_controller.js" defer></script>
+    <script src="js/bandy_controller.js" defer></script>
 </head>
 <body>
   <div class="background"></div>
