--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fit=cover">
-    <title>pongsemble</title>
+    <title>bandy</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="/__/firebase/8.3.1/firebase-app.js" defer></script>
@@ -15,15 +15,17 @@
     <!-- Initialize Firebase -->
     <script src="/__/firebase/init.js" defer></script>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/pongsemble_client.js" defer></script>
+    <script src="js/bandy_client.js" defer></script>
 </head>
 <body>
 
     <div class="header">
-      <div id="playerCount"></div>
-      <div id="title"></div>
-      <div id="liveState"></div>
+      <div class= "bubble" id="playerCount">Players</div>
+      <div id="title">bandy</div>
+      <div class= "bubble" id="liveState">Live</div>
     </div>
     <canvas id="canvas"></canvas>
 
