--- a/public/controller.html
+++ b/public/controller.html
@@ -17,7 +17,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/controller.css">
     <script src="https://cdn.jsdelivr.net/npm/@magenta/music@1.3.1"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous"></script>
     <script src="js/helpers.js" defer></script>
@@ -37,17 +37,37 @@
         <button class="color color-5" id="btn5" data-id="5"><span></span></button>
         <button class="color color-6" id="btn6" data-id="6"><span></span></button>
         <button class="color color-7" id="btn7" data-id="7"><span></span></button>
-        <button class="settings" onclick="settingsBox.hidden = !settingsBox.hidden" id="btnSettings">
+        <button class="settings" id="btnSettings">
          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="none" d="M0 0h20v20H0V0z"/><path d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/></svg>
         </button>
   </div>
   
-  <span class="dialog" id="settingsBox" hidden>
-    MIDI Output
-    <span id="midiOutBox">
-      <select id="selectOut"></select>
-    </span>
-  </span>
+  <div class="dialog" id="settingsBox" hidden>
+    <div class="settingParam">
+      MIDI Output
+      <span id="midiOutBox">
+        <select id="selectOut"></select>
+      </span>
+    </div>
+    <div class="settingParam">
+      Ball Speed
+      <input name="ballSpeed" type="number" id="ballSpeed">
+    </div>
+
+    <div class="settingParam">
+      Event URL
+      <input name="eventURL" type="text" id="eventURL">
+    </div>
+
+    <div class="settingParam">
+      Room is Live
+      <input name="isLive" type="checkbox" id="isLive">
+    </div>
+
+    <div>
+      <button id="applySettings">Apply Settings</button>
+    </div>
+  </div>
     
 </body>
 </html>
