Updated look and feel of both interfaces. Added header to controller. Mode text more responsive. Updated visual states of on/off line. Stopped an error if MIDI not connected.

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <div class="header">
       <div class= "bubble" id="playerCount">Players</div>
       <div id="title">bandy</div>
-      <div class= "bubble" id="liveState">Live</div>
+      <div class= "bubble" id="liveState">Band Offline</div>
     </div>
     <canvas id="canvas"></canvas>
 
