--- a/public/controller.html
+++ b/public/controller.html
@@ -33,7 +33,7 @@
   <div class="header">
     <div class= "bubble" id="playerCount">Players</div>
     <div id="title">bandy controller</div>
-    <div class= "bubble" id="liveState">Band Offline</div>
+    <div class= "bubble" id="settings">Settings</div>
   </div>
   <div class="background"></div>
   <canvas id="canvas"></canvas>
@@ -48,9 +48,6 @@
     <button class="color color-5" id="btn5" data-id="5"><span></span></button>
     <button class="color color-6" id="btn6" data-id="6"><span></span></button>
     <button class="color color-7" id="btn7" data-id="7"><span></span></button>
-    <button class="settings" id="btnSettings">
-      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 20 20"><path fill="none" d="M0 0h20v20H0V0z"/><path d="M15.95 10.78c.03-.25.05-.51.05-.78s-.02-.53-.06-.78l1.69-1.32c.15-.12.19-.34.1-.51l-1.6-2.77c-.1-.18-.31-.24-.49-.18l-1.99.8c-.42-.32-.86-.58-1.35-.78L12 2.34c-.03-.2-.2-.34-.4-.34H8.4c-.2 0-.36.14-.39.34l-.3 2.12c-.49.2-.94.47-1.35.78l-1.99-.8c-.18-.07-.39 0-.49.18l-1.6 2.77c-.1.18-.06.39.1.51l1.69 1.32c-.04.25-.07.52-.07.78s.02.53.06.78L2.37 12.1c-.15.12-.19.34-.1.51l1.6 2.77c.1.18.31.24.49.18l1.99-.8c.42.32.86.58 1.35.78l.3 2.12c.04.2.2.34.4.34h3.2c.2 0 .37-.14.39-.34l.3-2.12c.49-.2.94-.47 1.35-.78l1.99.8c.18.07.39 0 .49-.18l1.6-2.77c.1-.18.06-.39-.1-.51l-1.67-1.32zM10 13c-1.65 0-3-1.35-3-3s1.35-3 3-3 3 1.35 3 3-1.35 3-3 3z"/></svg>
-    </button>
   </div>
   
   <div class="dialog" id="settingsBox" hidden>
@@ -77,11 +74,12 @@
       <input name="isLive" type="checkbox" id="isLive">
     </div>
     <div class="settingParam">
-      <button id="clearPlayers">Clear Players</button>
+      <button class="splash-button small" id="clearPlayers">Clear Players</button>
     </div>
-
+    <hr>
     <div class="apply">
-      <button id="applySettings">Apply Settings</button>
+      <button class="splash-button small" id="applySettings">Apply Settings</button>
+      <button class="splash-button small" id="closeSettings">Close</button>
     </div>
   </div>
     
