Updated info for events. Added splash screen for Client whose display state is determined by the live state.

--- a/public/controller.html
+++ b/public/controller.html
@@ -65,8 +65,8 @@
     </div>
 
     <div class="settingParam">
-      Event URL
-      <input name="eventURL" type="text" id="eventURL">
+      Event Info
+      <input name="eventInfo" type="text" id="eventInfo">
     </div>
 
     <div class="settingParam">
