Collision detections works in Tombola. Needs work but good enough for now. TODO: - Move collision detection to same drawTombola function to save processing time. - Show game choice screen. - Add Instruction startup screen - Add help in Info popup.

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/client.css">
 
+    <script src="./js/two.min.js" defer></script>
+
     <script src="js/helpers.js" defer></script>
     <script src="js/paddle.js" defer></script>
     <script src="js/tombola.js" defer></script>
