Updated some UI interactions following playtest. Added more editable fields for Event info and updated Controller to simplfy editing Added stats tracking for game selection to see which people prefer.

--- a/public/controller.html
+++ b/public/controller.html
@@ -65,21 +65,37 @@
     </div>
 
     <div class="settingParam">
-      Event Info
-      <input name="eventInfo" type="text" id="eventInfo">
+      No-Event Info <br>
+      <!-- <input name="eventInfo" type="text" id="eventInfo"> -->
+      <textarea id="noEventInfo"></textarea>
+    </div>
+
+    <div class="settingParam">
+      Event Info <br>
+      <!-- <input name="eventInfo" type="text" id="eventInfo"> -->
+      <textarea id="eventInfo"></textarea>
+    </div>
+
+    <div class="settingParam">
+      Event URL <br>
+      <input name="eventURL" type="text" id="eventURL">
+    </div>
+    <div class="settingParam">
+      Help URL <br>
+      <input name="helpURL" type="text" id="helpURL">
     </div>
 
     <div class="settingParam">
       Room is Live
       <input name="isLive" type="checkbox" id="isLive">
     </div>
-    <div class="settingParam">
-      <button class="splash-button small" id="clearPlayers">Clear Players</button>
-    </div>
     <hr>
     <div class="apply">
+      
       <button class="splash-button small" id="applySettings">Apply Settings</button>
       <button class="splash-button small" id="closeSettings">Close</button>
+      <button class="splash-button small" id="clearPlayers">Clear Players</button>
+      <button class="splash-button small" id="clearStats">Clear Stats</button>
     </div>
   </div>
     
