Fixed controller DB updating/Storing. Fixed stat clearing.

--- a/public/controller.html
+++ b/public/controller.html
@@ -92,7 +92,7 @@
     <hr>
     <div class="apply">
       
-      <button class="splash-button small" id="applySettings">Apply Settings</button>
+      <button class="splash-button small" id="storeSettings">Store Settings</button>
       <button class="splash-button small" id="closeSettings">Close</button>
       <button class="splash-button small" id="clearPlayers">Clear Players</button>
       <button class="splash-button small" id="clearStats">Clear Stats</button>
