added missing projectWebsite settings to Controller.

--- a/public/controller.html
+++ b/public/controller.html
@@ -81,6 +81,10 @@
       <input name="eventURL" type="text" id="eventURL">
     </div>
     <div class="settingParam">
+      Project Website <br>
+      <input name="projectWebsite" type="text" id="projectWebsite">
+    </div>
+    <div class="settingParam">
       Help URL <br>
       <input name="helpURL" type="text" id="helpURL">
     </div>
