Updated instruction screens. Added hit counter to reset stuck balls. Fixed random angle function. Updated Tombola for clearer interaction.

--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,14 @@
       </p>
     </div>
     <div class="splash-live" hidden>
+      <p>There is currently a live performance going on and you are welcome to join and be a part of the band !</p>
+      <button class="splash-button instruct" id="instructButton" autofocus><span>Click for Instructions</span></button>
+    </div>
+  </div>
+
+  <div class="join" hidden>
       <span id="eventInfo"></span>
       <button class="splash-button join" id="joinButton" autofocus><span>Join the Band</span></button>
-    </div>
   </div>
 
   <div class="gameChoice" hidden>
