Added performer mode to allow instrument performers the ability to see notes in standard notation. Implemented log-in so they can store their config info in the database. Also added various functions to keep notes within a defined range based on instrument selection. MIDI output is allowed for MIDI instruments.Updated Controller to store an array of MIDI notes to the database when using with Performers. TODO: tie all user params to UI settings page and store users' setting in DB for recall.

--- a/public/controller.html
+++ b/public/controller.html
@@ -93,6 +93,10 @@
       Room is Live
       <input name="isLive" type="checkbox" id="isLive">
     </div>
+    <div class="settingParam">
+      Performers online
+      <input name="performers" type="checkbox" id="performers">
+    </div>
     <hr>
     <div class="apply">
       
