--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,8 @@
       <div class="centered">
         Visit the Project website for more info <br>
         <span id="projectWebsite"></span><br>
-        For additional Help visit <br>
-        <span id="helpURL"></span><br>
+        <!-- For additional Help visit <br>
+        <span id="helpURL"></span><br> -->
       </div>
       <div class="centered">
         created by Thadeus Frazier-Reed 2021
