Performer UI selection updates and working transposition.

--- a/public/controller.html
+++ b/public/controller.html
@@ -102,8 +102,9 @@
       
       <button class="splash-button small" id="storeSettings">Store Settings</button>
       <button class="splash-button small" id="closeSettings">Close</button>
-      <button class="splash-button small" id="clearPlayers">Clear Players</button>
+      <button class="splash-button small" id="clearNotes">Clear Notes</button>      
       <button class="splash-button small" id="clearStats">Clear Stats</button>
+      <button class="splash-button small" id="clearPlayers">Clear Players</button>
     </div>
   </div>
     
