--- a/public/performer.html
+++ b/public/performer.html
@@ -85,23 +85,25 @@
   
   <div class="dialog" id="settingsBox" hidden>
     <div>
-      Event URL <span id="eventURL"></span>
+      <label for="eventURL">Event URL</label>
+      <span id="eventURL"></span>
     </div>
     <div>
-      Project Website <span id="projectWebsite"></span>
+      <label for="projectWebsite">Project Website</label>
+      <span id="projectWebsite"></span>
     </div>
 
     <hr>
     <div class="settingParam">
-      Performer Name
+      <label for="nameSetting">Performer Name</label>
       <input type="text" id="nameSetting">
     </div>
     <div class="settingParam">
-      Instrument type
+      <label for="instrumentSetting">Instrument type</label>
       <select id="instrumentSetting"></select>
     </div>
     <div class="settingParam">
-      Instrument clef
+      <label for="clefSetting">Instrument clef</label>
       <select id="clefSetting"></select>
     </div>
     <div class="settingParam horiz">
