Added out of range note fitting option and fixed other radio selection logic.

--- a/public/performer.html
+++ b/public/performer.html
@@ -130,6 +130,16 @@
       </div>
     </div>
     <div class="settingParam">
+      Out of range notes <br>
+      <div id="" class="centered radioSet">
+        <input type="radio" value="fit" id="outOfRangeFit" name="outOfRange">
+        <label for="outOfRangeFit">fit range</label>
+      
+        <input type="radio" value="ignore" id="outOfRangeIgnore" name="outOfRange">
+        <label for="outOfRangeIgnore">ignore</label>
+      </div>
+    </div>
+    <div class="settingParam">
       Number of Notes to display <br>
       <div id="" class="centered radioSet">
         <input type="radio" value="5" id="non5Radio" name="numberOfNotes">
